--- a/templates/base.html
+++ b/templates/base.html
@@ -62,10 +62,12 @@
                                 <i class="fas fa-user me-1"></i>{{ user.get_full_name|default:user.username }}
                             </a>
                             <ul class="dropdown-menu">
+                                {% if user.is_superuser %}
                                 <li><a class="dropdown-item" href="{% url 'admin:index' %}">
                                     <i class="fas fa-cog me-2"></i>Admin
                                 </a></li>
                                 <li><hr class="dropdown-divider"></li>
+                                {% endif %}
                                 <li><a class="dropdown-item" href="{% url 'logout' %}">
                                     <i class="fas fa-sign-out-alt me-2"></i>Cerrar Sesión
                                 </a></li>
